--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -1,9 +1,4 @@
 apiVersion: v1
-kind: Namespace
-metadata:
-  name: ${NAMESPACE}
----
-apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: ${APP_NAME}
@@ -19,19 +14,17 @@ metadata:
   namespace: ${NAMESPACE}
   labels:
     app: ${APP_NAME}
-    team: ${TEAM_NAME}
 type: Opaque
 data:
   google-service-account.json: ${GOOGLE_SERVICE_ACCOUNT}
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ${APP_NAME}
   namespace: ${NAMESPACE}
   labels:
     app: ${APP_NAME}
-    team: ${TEAM_NAME}
 spec:
   replicas: 1
   strategy:
@@ -44,13 +37,11 @@ spec:
     metadata:
       labels:
         app: ${APP_NAME}
-        team: ${TEAM_NAME}
-        version: ${VERSION}
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "9001"
     spec:
-      serviceAccount: ${APP_NAME}
+      serviceAccountName: ${APP_NAME}
       terminationGracePeriodSeconds: 300
       affinity:
         nodeAffinity:
@@ -59,12 +50,10 @@ spec:
             preference:
               matchExpressions:
               - key: cloud.google.com/gke-preemptible
-                operator: In
-                values:
-                - "true"
+                operator: NotExists
       containers:
       - name: ${APP_NAME}
-        image: estafette/estafette-gke-preemptible-killer:${GO_PIPELINE_LABEL}
+        image: acoshift/gke-preemptible-killer:${VERSION}
         ports:
         - name: prom-metrics
           containerPort: 9001
